--- a/index.html
+++ b/index.html
@@ -582,6 +582,6 @@
             document.getElementById('ppv-image-preview').classList.add('hidden');
         }
     </script>
-    <script src="./js/login.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
