--- a/index.html
+++ b/index.html
@@ -581,7 +581,6 @@
             document.getElementById('ppv-description').value = '';
             document.getElementById('ppv-image-preview').classList.add('hidden');
         }
-    </script>
-    <script src="./script.js"></script>
+   <script src="./script.js" type="module"></script>
 </body>
 </html>
